tests/should_fail/traits/17_impl_refinement.coma
module M_17_impl_refinement__qyi370234707595078754__my_function [#"17_impl_refinement.rs" 15 4 15 34] (* <() as Tr> *)
  let%span s17_impl_refinement0 = "17_impl_refinement.rs" 16 8 16 10
  let%span s17_impl_refinement1 = "17_impl_refinement.rs" 13 15 13 19
  let%span s17_impl_refinement2 = "17_impl_refinement.rs" 14 14 14 27
  
  use creusot.int.UInt64
  
  use creusot.prelude.Any
  
  use creusot.int.UInt64
  
  use mach.int.Int
  
  meta "compute_max_steps" 1000000
  
  let rec my_function'0[#"17_impl_refinement.rs" 15 4 15 34] (self:()) (return'  (ret:UInt64.t))= {[@expl:my_function requires] [%#s17_impl_refinement1] true}
    (! bb0 [ bb0 = s0 [ s0 =  [ &_0 <- [%#s17_impl_refinement0] (20 : UInt64.t) ] s1 | s1 = return' {_0} ]  ] )
    [ & _0 : UInt64.t = Any.any_l () ]
    
    [ return' (result:UInt64.t)-> {[@expl:my_function ensures] [%#s17_impl_refinement2] UInt64.t'int result >= 15}
      (! return' {result}) ]

end
module M_17_impl_refinement__qyi783700436729103035__need_false [#"17_impl_refinement.rs" 30 4 30 25] (* <() as ReqFalse> *)
  let%span s17_impl_refinement0 = "17_impl_refinement.rs" 29 15 29 23
  let%span s17_impl_refinement1 = "17_impl_refinement.rs" 30 26 30 28
  
  use creusot.int.UInt64
  
  use mach.int.Int
  
  use creusot.int.UInt64
  
  constant y  : UInt64.t
  
  function need_false'0 [#"17_impl_refinement.rs" 30 4 30 25] (y : UInt64.t) : ()
  
  goal vc_need_false'0 : true
end
module M_17_impl_refinement__qyi370234707595078754__my_function__refines [#"17_impl_refinement.rs" 15 4 15 34] (* <() as Tr> *)
  let%span s17_impl_refinement0 = "17_impl_refinement.rs" 15 4 15 34
  
  predicate inv'0 (_1 : ())
  
  axiom inv_axiom'0 [@rewrite] : forall x : () [inv'0 x] . inv'0 x = true
  
  use creusot.int.UInt64
  
  use creusot.int.UInt64
  
  use mach.int.Int
  
  goal refines : [%#s17_impl_refinement0] forall self : () . inv'0 self
   -> (forall result : UInt64.t . UInt64.t'int result >= 15  -> UInt64.t'int result >= 10)
end
module M_17_impl_refinement__qyi783700436729103035__need_false__refines [#"17_impl_refinement.rs" 30 4 30 25] (* <() as ReqFalse> *)
  let%span s17_impl_refinement0 = "17_impl_refinement.rs" 30 4 30 25
  
  use creusot.int.UInt64
  
  use creusot.int.UInt64
  
  use mach.int.Int
  
  goal refines : [%#s17_impl_refinement0] forall x : UInt64.t . UInt64.t'int x >= 10  -> UInt64.t'int x >= 15
end
